[gd_scene load_steps=10 format=3 uid="uid://bsk5ty8jybk72"]

[ext_resource type="Script" uid="uid://bt0sd3jxnhwd4" path="res://Elements/Scripts/Plr/Plr/Plr.gd" id="1_dj7dw"]
[ext_resource type="Texture2D" uid="uid://dtn58us5kmc07" path="res://Elements/Texture Assets/Plr/Plr/Human.svg" id="2_dhafj"]
[ext_resource type="PackedScene" uid="uid://d0oy3n0lxfqii" path="res://Elements/Scenes/Interface/Inventory/inventory.tscn" id="3_3ylvp"]
[ext_resource type="Texture2D" uid="uid://cony3melekgu" path="res://Elements/Texture Assets/Plr/Items/Picks/WoodenPick.svg" id="3_ydxyf"]

[sub_resource type="Animation" id="Animation_45je7"]
resource_name = "Kick"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(17, -10), Vector2(38, -9), Vector2(17, -10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightHand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(17, 10), Vector2(39, 2), Vector2(17, 10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Handitemsprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_ydxyf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Handitemsprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(25, 7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1rp7w"]
_data = {
&"Kick": SubResource("Animation_45je7"),
&"RESET": SubResource("Animation_ydxyf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iw7h3"]
size = Vector2(22, 18)

[sub_resource type="CircleShape2D" id="CircleShape2D_5sodx"]
radius = 13.0

[node name="Plr" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_dj7dw")

[node name="Base" type="Sprite2D" parent="."]
texture = ExtResource("2_dhafj")

[node name="Hands" type="Node2D" parent="Base"]

[node name="Handitemsprite" type="Sprite2D" parent="Base/Hands"]
position = Vector2(25, 7)
rotation = 1.43168
scale = Vector2(0.27381, 0.27381)
texture = ExtResource("3_ydxyf")

[node name="LeftHand" type="Sprite2D" parent="Base/Hands"]
position = Vector2(17, -10)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_dhafj")

[node name="RightHand" type="Sprite2D" parent="Base/Hands"]
position = Vector2(17, 10)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_dhafj")

[node name="HandAnim" type="AnimationPlayer" parent="Base/Hands"]
libraries = {
&"": SubResource("AnimationLibrary_1rp7w")
}

[node name="HandZone" type="Area2D" parent="Base/Hands"]

[node name="HandZoneArea" type="CollisionShape2D" parent="Base/Hands/HandZone"]
position = Vector2(29, 0)
shape = SubResource("RectangleShape2D_iw7h3")
debug_color = Color(0.773945, 0.250196, 0.896185, 0.42)

[node name="BaseHitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5sodx")

[node name="PlrCamera" type="Camera2D" parent="."]
position_smoothing_enabled = true
drag_left_margin = 0.4
drag_top_margin = 0.4
drag_right_margin = 0.4
drag_bottom_margin = 0.4
editor_draw_drag_margin = true

[node name="inventory" parent="PlrCamera" instance=ExtResource("3_3ylvp")]
visible = false
offset_left = -579.0
offset_top = -328.0
offset_right = -579.0
offset_bottom = -328.0
